--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -12,6 +12,7 @@ html {
 body {
   margin: 0;
 }
+
 article,
 aside,
 details,
@@ -1083,8 +1084,10 @@ html {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
+
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -1114,8 +1117,16 @@ a:focus {
 figure {
   margin: 0;
 }
+
+.navbar-nav li a {
+    color: #fff;
+    font-size: 16px;
+}
+
 img {
   vertical-align: middle;
+  width: 100%;
+  height: auto;
 }
 .img-responsive,
 .thumbnail > img,
@@ -6766,25 +6777,65 @@ button.close {
 /* カスタム, iPhone Retinaディスプレイ */ 
 @media only screen and (min-width : 320px) {
     
+     .index_hr {
+         width: 100%;
+        height: 2px;
+        border-bottom: 3px solid #4e7eab;
+        margin-bottom: 10px;
+    }
+    
+    .mh4 {
+        margin-top: 10px;
+    }
+    
 }
  
 /* XSサイズ : Extra Small Devices, Phones */ 
 @media only screen and (min-width : 480px) {
+    
+     .index_hr {
+         width: 100%;
+        height: 2px;
+        border-bottom: 3px solid #4e7eab;
+    }
+    
+    .mh4 {
+        margin-top: 10px;
+    }
  
 }
  
 /* Sサイズ、タブレット : Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
+    
+     .index_hr {
+         width: 100%;
+        height: 2px;
+        border-bottom: 3px solid #4e7eab;
+    }
+    
+    .mh4 {
+        margin-top: 10px;
+    }
  
 }
  
 /* Mサイズ、デスクトップ : Medium Devices, Desktops */
 @media only screen and (min-width : 960px) {
  
+   
+    .col-md-1 {
+        display: none;
+    }
+    
      .index_hr {
          width: 100%;
         height: 2px;
         border-bottom: 3px solid #4e7eab;
+    }
+    
+    .mh4 {
+        margin-top: ;
     }
     
 }
