--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -1989,7 +1989,8 @@ pre code {
     width: 83.33333333%;
   }
   .col-md-9 {
-    width: 75%;
+    /*変更前width: 75%;*/
+    width: 82%;
   }
   .col-md-8 {
     width: 66.66666667%;
@@ -2007,7 +2008,7 @@ pre code {
     width: 33.33333333%;
   }
   .col-md-3 {
-    width: 25%;
+    width: 27%;
   }
   .col-md-2 {
     width: 16.66666667%;
@@ -7117,6 +7118,10 @@ a:hover {
         display: none;
     }
     
+    .page_title {
+        font-size: 26px;
+    }
+    
      .index_hr {
          width: 100%;
         height: 2px;
@@ -7126,6 +7131,11 @@ a:hover {
     .mh4 {
         margin-top: 20px;
         font-weight: bold;
+    }
+    
+    .hr_h3 {
+        border-bottom: 6px solid #4e7eab;
+        margin-bottom: 30px;
     }
     
     footer {
@@ -7138,6 +7148,61 @@ a:hover {
     footer p {
         font-size: 16px;
     }
+    
+    .contents_wrapper {
+        border-radius: 10px;
+        /* box-shadow */
+        box-shadow:0px 0px 5px 1px #bbbbbb;
+        -moz-box-shadow:0px 0px 5px 1px #bbbbbb;
+        -webkit-box-shadow:0px 0px 5px 1px #bbbbbb;
+        z-index: 10000;
+        padding-bottom: 
+    }
+    
+    .contents_wrapper h3 {
+        padding: 10px 10px 5px 5px;
+    }
+    
+     .contents_wrapper p {
+       padding-left: 25px;
+       padding-right: 25px;
+    }
+    
+    .contents_wrapper .hr_h3 {
+        margin-right:15px;
+        margin-left:15px;
+    }
+    
+    .fixed_menu {
+        height: auto;
+        float: left;
+    }
+    
+    .right_box {
+        margin-right: 0;
+        width: 100%;
+    }
+    
+    .clearfix:after {
+  content: "."; 
+  display: block;
+  clear: both;
+  height: 0;
+  visibility: hidden;
+  font-size: 0;
+}
+
+.clearfix {
+  min-height: 1px;
+}
+
+* html .clearfix {
+  height: 1px;
+  /*\*//*/
+  height: auto;
+  overflow: hidden;
+  /**/
+}
     
 }
  
@@ -7153,4 +7218,26 @@ a:hover {
     
 }*/
  
+/*clearfix*/
+
+.clearfix:after {
+  content: "."; 
+  display: block;
+  clear: both;
+  height: 0;
+  visibility: hidden;
+  font-size: 0;
+}
+
+.clearfix {
+  min-height: 1px;
+}
+
+* html .clearfix {
+  height: 1px;
+  /*\*//*/
+  height: auto;
+  overflow: hidden;
+  /**/
+}
  
