--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -1990,7 +1990,8 @@ pre code {
   }
   .col-md-9 {
     /*変更前width: 75%;*/
-    width: 82%;
+    width: 80%;
+    float: right;
   }
   .col-md-8 {
     width: 66.66666667%;
@@ -2011,7 +2012,7 @@ pre code {
     width: 27%;
   }
   .col-md-2 {
-    width: 16.66666667%;
+    width: 20%;
   }
   .col-md-1 {
     width: 8.33333333%;
@@ -6823,8 +6824,7 @@ a:hover {
  
 /* カスタム, iPhone Retinaディスプレイ */ 
 @media only screen and (min-width : 280px) {
-    
-    
+   
      .col-md-1 {
         display: none;
     }
@@ -6841,18 +6841,34 @@ a:hover {
 }
 
 .globNav-inner {
-    margin-top: 10px;
+    margin-top: 18px;
+    margin-bottom: 0;
 }
 
 .globNav-inner li {
+     border-bottom: 1px dashed #eee;
+   
+}
+
+.globNav-inner li:first-child {
+     border-top: 1px dashed #eee;
    
 }
 
 .globNav-inner li a{
     font-size: 14px;
-    color: #333;
+    color: #fff;
     line-height: 2.0;
 }
+  
+
+
+ .page_title {
+        background: #4e7eab;
+        color: #fff;
+        margin: 0 0 10px 0;
+        padding: 15px 0 10px 10px;
+    }
     
     
     .left-sp {
@@ -6863,9 +6879,17 @@ a:hover {
          width: 100%;
         height: 2px;
         border-bottom: 3px solid #4e7eab;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
     }
     
+    .hr_h3 {
+    border-bottom: 6px solid #4e7eab;
+    margin-bottom: 20px;
+    }   
+
+    .contents_title {
+    font-size: 20px;    
+    }
     .mh4 {
         margin-top: 10px;
         font-weight: bold;
@@ -6954,6 +6978,27 @@ a:hover {
         font-size: 14px;
     }
 
+    #page-top {
+			position: fixed;
+			bottom: 15px;
+                        left: 20px;
+			font-size: 77%;
+		}
+                
+		#page-top a {
+			background: url(../images/pagetop.png) no-repeat;
+			text-decoration: none;
+			color: #fff;
+			width: 80px;
+			padding: 30px 5px 50px 5px;
+			text-align: center;
+			display: block;
+		}
+                
+		#page-top a:hover {
+			text-decoration: none;
+		}
+    
 }
  
 /* XSサイズ : Extra Small Devices, Phones */ 
@@ -6973,9 +7018,7 @@ a:hover {
     padding-left: 0;
 }
 
-.globNav-inner {
-    margin-top: 10px;
-}
+
 
 .globNav-inner li {
    
@@ -6983,7 +7026,7 @@ a:hover {
 
 .globNav-inner li a{
     font-size: 16px;
-    color: #333;
+    color: #fff;
     line-height: 2.0;
 }
     
@@ -6996,6 +7039,15 @@ a:hover {
         height: 2px;
         border-bottom: 3px solid #4e7eab;
     }
+    
+    .contents_title {
+        font-size: 24px;
+    }
+    
+    .hr_h3 {
+    border-bottom: 6px solid #4e7eab;
+    margin-bottom: 20px;
+}
     
     .mh4 {
         margin-top: 20px;
@@ -7064,6 +7116,7 @@ a:hover {
      .globNav-inner{ 
         overflow: hidden;
         list-style: none;
+        margin-top: 15px;
     }
     
     .globNav-inner > li { float: left;}
@@ -7078,8 +7131,21 @@ a:hover {
         border-bottom: 3px solid #4e7eab;
     }
     
+    .page_title {
+        background: #4e7eab;
+        color: #fff;
+        margin: 0 0 10px 0;
+        padding: 15px 0 10px 5%;
+    }
+    
+    
     .navbar-form {
   padding-bottom: 20px;
+}
+
+.hr_h3 {
+    border-bottom: 6px solid #4e7eab;
+    margin-bottom: 30px;
 }
     
     .mh4 {
@@ -7102,6 +7168,7 @@ a:hover {
         font-size: 14px;
     }
     
+   
     
 }
  
@@ -7118,8 +7185,16 @@ a:hover {
         display: none;
     }
     
-    .page_title {
+    .contents_title {
         font-size: 26px;
+    }
+    
+    .margin-top30 {
+        margin-top: 30px;
+    }
+    
+  .contents_ul {
+        padding-right: 3%;
     }
     
      .index_hr {
@@ -7128,16 +7203,61 @@ a:hover {
         border-bottom: 3px solid #4e7eab;
     }
     
-    .mh4 {
+    .page_title_sp {
+        display: none;
+    }
+    
+    .title_wrapper {
+        background: #4e7eab;
+        color: #fff;
+    }
+    
+    .page_title {
+        padding: 15px 0 10px 10px;
+        width: 100%;
+        max-width: 1180px;
+        margin: 0 auto;
+        margin-bottom: 15px;
+    }
+    
+     #fixedBox ul {
+        margin-top: 20px;
+    }
+    
+     #fixedBox ul li a {
+        font-size: 16px;
+        line-height: 1.6;
+        color: #333;
+    }
+    
+    #fixedBox ul li:hover {
+        color:#0e3e6c;
+        background; #eee;
+    }
+    
+   
+    
+   
+
+.mh4 {
         margin-top: 20px;
         font-weight: bold;
     }
     
     .hr_h3 {
-        border-bottom: 6px solid #4e7eab;
+        border-bottom: 6px solid #7ba3ca;
         margin-bottom: 30px;
     }
     
+   
+    
+   #page-top {
+			position: fixed;
+			bottom: 15px;
+                        left: 50px;
+			font-size: 77%;
+   }
+  
     footer {
         background: #7ba3ca;
         text-align: center;
@@ -7156,11 +7276,11 @@ a:hover {
         -moz-box-shadow:0px 0px 5px 1px #bbbbbb;
         -webkit-box-shadow:0px 0px 5px 1px #bbbbbb;
         z-index: 10000;
-        padding-bottom: 
+       
     }
     
     .contents_wrapper h3 {
-        padding: 10px 10px 5px 5px;
+        padding: 20px 10px 0 5px;
     }
     
      .contents_wrapper p {
@@ -7177,67 +7297,28 @@ a:hover {
         height: auto;
         float: left;
     }
+        
+    .fixed {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10000;
+}
     
     .right_box {
         margin-right: 0;
         width: 100%;
     }
     
-    .clearfix:after {
-  content: "."; 
-  display: block;
-  clear: both;
-  height: 0;
-  visibility: hidden;
-  font-size: 0;
-}
-
-.clearfix {
-  min-height: 1px;
-}
-
-* html .clearfix {
-  height: 1px;
-  /*\*//*/
-  height: auto;
-  overflow: hidden;
-  /**/
-}
-    
-}
- 
-/* Lサイズ、ワイドスクリーン : Large Devices, Wide Screens */
-
-/*@media only screen and (min-width : 1200px) {
- 
-      .index_hr {
-         width: 100%;
-        height: 2px;
-        border-bottom: 3px solid #4e7eab;
+  .margin20pc {
+        margin-top: 20px;
     }
     
-}*/
+    
+
+}
  
-/*clearfix*/
-
-.clearfix:after {
-  content: "."; 
-  display: block;
-  clear: both;
-  height: 0;
-  visibility: hidden;
-  font-size: 0;
-}
-
-.clearfix {
-  min-height: 1px;
-}
-
-* html .clearfix {
-  height: 1px;
-  /*\*//*/
-  height: auto;
-  overflow: hidden;
-  /**/
-}
+ 
+ 
+    
  
