--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -4036,8 +4036,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eee;
+  background-color: #DBE9F7;
   color: #0e3e6c;
+  transition: 0.1s ;
 }
 .nav > li.disabled > a {
   color: #777;
@@ -6870,6 +6871,28 @@ a:hover {
         padding: 15px 0 10px 10px;
     }
     
+     /*ipヘッダーロゴ画像*/
+    
+    .img_p {
+        position: relative;
+    }
+    
+    .m_logo {
+        position: absolute;
+        bottom: 15px;
+        right: 20px;
+        width: 30%;
+    }
+    
+    #A_logo {
+        width: 40%;
+        float: left;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom: 5px;
+    }
+    
+    
     
     .left-sp {
         font-size:21px;
@@ -7040,6 +7063,28 @@ a:hover {
         border-bottom: 3px solid #4e7eab;
     }
     
+    /*SPヘッダーロゴ画像*/
+    
+    .img_p {
+        position: relative;
+    }
+    
+    .m_logo {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        width: 19%;
+    }
+    
+    #A_logo {
+        width: 30%;
+        float: left;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom: 5px;
+    }
+    
+    
     .contents_title {
         font-size: 24px;
     }
@@ -7131,6 +7176,28 @@ a:hover {
         border-bottom: 3px solid #4e7eab;
     }
     
+    /*TBヘッダーロゴ画像*/
+    
+    .img_p {
+        position: relative;
+    }
+    
+    .m_logo {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        width: 19%;
+    }
+    
+    #A_logo {
+        width: 30%;
+        float: left;
+        margin-top: 10px;
+        margin-left: 10px;
+        margin-bottom: 5px;
+    }
+    
+    
     .page_title {
         background: #4e7eab;
         color: #fff;
@@ -7185,6 +7252,41 @@ a:hover {
         display: none;
     }
     
+    .side-title {
+        width: 90%;
+        font-size: 20px;
+        margin-top: 30px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        border-bottom: 3px solid #4e7eab;
+        border-left: 10px solid #19538a;
+    }
+
+    /*PCヘッダーロゴ画像*/
+    
+    .img_p {
+        position: relative;
+    }
+    
+    .m_logo {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        width: 19%;
+    }
+    
+    #A_logo {
+        width: 30%;
+        float: left;
+    }
+    
+    
+    
+    .fixed .side-title {
+        width: 11%;
+    }
+    
     .contents_title {
         font-size: 26px;
     }
@@ -7222,6 +7324,8 @@ a:hover {
     
      #fixedBox ul {
         margin-top: 20px;
+        padding-left: 13px;
+        margin-top: 2px;
     }
     
      #fixedBox ul li a {
@@ -7246,7 +7350,7 @@ a:hover {
     
     .hr_h3 {
         border-bottom: 6px solid #7ba3ca;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     
    
@@ -7254,7 +7358,7 @@ a:hover {
    #page-top {
 			position: fixed;
 			bottom: 15px;
-                        left: 50px;
+                        left: 80px;
 			font-size: 77%;
    }
   
@@ -7310,9 +7414,80 @@ a:hover {
         width: 100%;
     }
     
+    /*画像調整*/
+    .contents_wrapper img {
+        text-align: center;
+        width: 60%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border: 1px solie #eee;
+    }
+    
+    /*画像にシャドウを付ける*/
+    
+    .frame img {
+        text-align: center;
+    }
+    
+    .contents_wrapper {
+        margin: 0 auto;
+    }
+    
+    .frame {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+	border:1px solid #ccc;/* 外枠の色 */    
+     background-color:#ffffff;/* 余白部分の色 */  
+     margin-bottom: 20px;
+     margin-top:20px;
+}
+    
+    
   .margin20pc {
         margin-top: 20px;
     }
+    
+    .margin-top10 {
+        margin-top: 10px;
+    }
+    
+     .margin-top20 {
+        margin-top: 20px;
+    }
+    
+     .margin-top30 {
+        margin-top: 30px;
+    }
+    
+    .margin-bottom0 {
+        margin-bottom: 0;
+    }
+    
+    .margin-bottom10 {
+        margin-bottom: 10px;
+    }
+    
+     .margin-bottom20 {
+        margin-bottom: 20px;
+    }
+    
+     .margin-bottom30 {
+        margin-bottom: 30px;
+    }
+    
+    .padding-bottom10 {
+        padding-bottom: 10px;
+    }
+    
+    .padding-bottom20 {
+        padding-bottom: 20px;
+    }
+    
+    .padding-bottom30 {
+        padding-bottom: 30px;
+    }
+    
     
     
 
