--- a/public_html/css/bootstrap.css
+++ b/public_html/css/bootstrap.css
@@ -6913,6 +6913,75 @@ a:hover {
     .contents_title {
     font-size: 20px;    
     }
+    
+        
+    .side-title {
+        width: 100%;
+        font-size: 20px;
+        margin-top: 30px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        border-bottom: 3px solid #4e7eab;
+        border-left: 10px solid #19538a;
+    }
+    
+      #fixedBox ul {
+        margin-top: 20px;
+        padding-left: 13px;
+        margin-top: 2px;
+    }
+    
+     #fixedBox ul li a {
+        font-size: 14px;
+        line-height: 1.6;
+        color: #333;
+    }
+    
+    #fixedBox ul li:hover {
+        color:#0e3e6c;
+        background; #eee;
+    }
+    
+    
+    
+     .contents_title {
+    font-size: 26px;
+    padding: 20px 10px 0 5px;
+    margin-top: 5px;;
+    }
+    
+    .contents_wrapper .hr_h3 {
+    margin-right: 15px;
+    margin-left: 15px;
+    }
+    
+    .contents_wrapper {
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px #bbbbbb;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+    }
+    
+    .contents_ul {
+    padding-right: 5%;
+    padding-left:5%;
+    
+}
+    
+    .contents_wrapper p {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+   
+
+
+.hr_h3 {
+    border-bottom: 6px solid #4e7eab;
+    margin-bottom: 15px;
+}
+    
+    
     .mh4 {
         margin-top: 10px;
         font-weight: bold;
@@ -6951,12 +7020,38 @@ a:hover {
 	bottom: 0;
 }
 
+   /*TB画像調整*/
+    .contents_wrapper img {
+        text-align: center;
+        width: 60%;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        border: 1px solie #eee;
+    }
+    
+    .frame img {
+        text-align: center;
+    }
+   
+    
+    .frame {
+        width: 95%;
+        margin: 0 auto;
+        text-align: center;
+	border:1px solid #ccc;/* 外枠の色 */    
+     background-color:#ffffff;/* 余白部分の色 */  
+     margin-bottom: 10px;
+     margin-top:20px;
+    
+}
+
+
   .navbar-header {
         height: 0px;
     }
     
     .navbar-form {
-  padding-bottom: 20px;
+  padding-bottom: 12px;
 }
  
 .menu-trigger,
@@ -6989,6 +7084,31 @@ a:hover {
 .menu-trigger span:nth-of-type(3) {
 	bottom: 0;
 }
+
+   /*SP画像調整*/
+    .contents_wrapper img {
+        text-align: center;
+        width: 90%;
+        margin-top: 20px;
+        border: 1px solie #eee;
+    }
+    
+    .frame img {
+        text-align: center;
+    }
+   
+    
+    .frame {
+        width: 95%;
+        margin: 0 auto;
+        text-align: center;
+	border:1px solid #ccc;/* 外枠の色 */    
+     background-color:#ffffff;/* 余白部分の色 */  
+     margin-top:20px;
+    
+}
+
+
 
  footer {
         background: #7ba3ca;
@@ -7084,15 +7204,74 @@ a:hover {
         margin-bottom: 5px;
     }
     
-    
-    .contents_title {
-        font-size: 24px;
-    }
+   
     
     .hr_h3 {
     border-bottom: 6px solid #4e7eab;
     margin-bottom: 20px;
 }
+
+    
+    .side-title {
+        width: 100%;
+        font-size: 20px;
+        margin-top: 30px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        border-bottom: 3px solid #4e7eab;
+        border-left: 10px solid #19538a;
+    }
+    
+      #fixedBox ul {
+        margin-top: 20px;
+        padding-left: 13px;
+        margin-top: 2px;
+    }
+    
+     #fixedBox ul li a {
+        font-size: 14px;
+        line-height: 1.6;
+        color: #333;
+    }
+    
+    #fixedBox ul li:hover {
+        color:#0e3e6c;
+        background; #eee;
+    }
+    
+     
+    
+     .contents_title {
+    font-size: 24px;
+    padding: 20px 10px 0 5px;
+    margin-top: 5px;
+    }
+    
+    .contents_wrapper .hr_h3 {
+    margin-right: 15px;
+    margin-left: 15px;
+    }
+    
+    .contents_wrapper {
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px #bbbbbb;
+    }
+    
+    .contents_wrapper p {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+    
+    .navbar-form {
+  padding-bottom: 20px;
+}
+
+.hr_h3 {
+    border-bottom: 6px solid #4e7eab;
+    margin-bottom: 15px;
+}
+    
     
     .mh4 {
         margin-top: 20px;
@@ -7149,12 +7328,40 @@ a:hover {
         font-size: 14px;
     }
 
+     /*TB画像調整*/
+    .contents_wrapper img {
+        text-align: center;
+        width: 60%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border: 1px solie #eee;
+    }
+    
+    .frame img {
+        text-align: center;
+    }
+   
+    
+    .frame {
+        width: 95%;
+        margin: 0 auto;
+        text-align: center;
+	border:1px solid #ccc;/* 外枠の色 */    
+     background-color:#ffffff;/* 余白部分の色 */  
+     margin-bottom: 5px;
+     margin-top:20px;
+    
+}
 
+
+    
+    
 }
  
 /* Sサイズ、タブレット : Small Devices, Tablets */
 @media only screen and (min-width : 768px) {
-     .globNav-row {display: none;}
+     
+    .globNav-row {display: none;}
      
      .globNav-toggle {display: none;}
      
@@ -7205,6 +7412,63 @@ a:hover {
         padding: 15px 0 10px 5%;
     }
     
+    .side-title {
+        width: 100%;
+        font-size: 20px;
+        margin-top: 30px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 10px;
+        border-bottom: 3px solid #4e7eab;
+        border-left: 10px solid #19538a;
+    }
+    
+      #fixedBox ul {
+        margin-top: 20px;
+        padding-left: 13px;
+        margin-top: 2px;
+    }
+    
+     #fixedBox ul li a {
+        font-size: 14px;
+        line-height: 1.6;
+        color: #333;
+    }
+    
+    #fixedBox ul li:hover {
+        color:#0e3e6c;
+        background; #eee;
+    }
+    
+     .contents_title {
+    font-size: 26px;
+    padding: 20px 10px 0 5px;
+    margin-top: 5px;;
+    }
+    
+    .contents_wrapper .hr_h3 {
+    margin-right: 15px;
+    margin-left: 15px;
+    }
+    
+   
+    
+    .contents_wrapper p {
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+ .contents_wrapper {
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px #bbbbbb;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+    }
+    
+    .contents_ul {
+    padding-right: 4%;
+    padding-left:4%;
+    }
     
     .navbar-form {
   padding-bottom: 20px;
@@ -7212,7 +7476,7 @@ a:hover {
 
 .hr_h3 {
     border-bottom: 6px solid #4e7eab;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
     
     .mh4 {
@@ -7235,7 +7499,74 @@ a:hover {
         font-size: 14px;
     }
     
-   
+    /*TB画像調整*/
+    .contents_wrapper img {
+        text-align: center;
+        width: 60%;
+        margin-top: 20px;
+        border: 1px solie #eee;
+    }
+    
+    .frame img {
+        text-align: center;
+    }
+    
+    .contents_wrapper {
+        margin: 0 auto;
+    }
+    
+    .frame {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
+	border:1px solid #ccc;/* 外枠の色 */    
+     background-color:#ffffff;/* 余白部分の色 */  
+     margin-bottom: 20px;
+     margin-top:20px;
+    
+}
+
+    /*マージン調整*/
+
+        .margin-top10 {
+        margin-top: 10px;
+    }
+    
+     .margin-top20 {
+        margin-top: 20px;
+    }
+    
+    .margin-bottom0 {
+        margin-bottom: 0;
+    }
+    
+    .margin-bottom10 {
+        margin-bottom: 10px;
+    }
+    
+     .margin-bottom20 {
+        margin-bottom: 20px;
+    }
+    
+     .margin-bottom30 {
+        margin-bottom: 30px;
+    }
+    
+    .padding-bottom10 {
+        padding-bottom: 10px;
+    }
+    
+    .padding-bottom20 {
+        padding-bottom: 20px;
+    }
+    
+    .padding-bottom30 {
+        padding-bottom: 30px;
+    }
+    
+    
+    
+    
     
 }
  
@@ -7286,10 +7617,9 @@ a:hover {
     .fixed .side-title {
         width: 11%;
     }
+
+   
     
-    .contents_title {
-        font-size: 26px;
-    }
     
     .margin-top30 {
         margin-top: 30px;
@@ -7314,6 +7644,8 @@ a:hover {
         color: #fff;
     }
     
+   
+    
     .page_title {
         padding: 15px 0 10px 10px;
         width: 100%;
@@ -7321,6 +7653,8 @@ a:hover {
         margin: 0 auto;
         margin-bottom: 15px;
     }
+    
+    /*サイドメニュー*/
     
      #fixedBox ul {
         margin-top: 20px;
@@ -7380,7 +7714,7 @@ a:hover {
         -moz-box-shadow:0px 0px 5px 1px #bbbbbb;
         -webkit-box-shadow:0px 0px 5px 1px #bbbbbb;
         z-index: 10000;
-       
+        padding-bottom: 0;
     }
     
     .contents_wrapper h3 {
@@ -7414,7 +7748,7 @@ a:hover {
         width: 100%;
     }
     
-    /*画像調整*/
+    /*PC画像調整*/
     .contents_wrapper img {
         text-align: center;
         width: 60%;
@@ -7422,8 +7756,6 @@ a:hover {
         margin-bottom: 20px;
         border: 1px solie #eee;
     }
-    
-    /*画像にシャドウを付ける*/
     
     .frame img {
         text-align: center;
@@ -7433,13 +7765,16 @@ a:hover {
         margin: 0 auto;
     }
     
+  
+    
+    
     .frame {
         width: 80%;
         margin: 0 auto;
         text-align: center;
 	border:1px solid #ccc;/* 外枠の色 */    
      background-color:#ffffff;/* 余白部分の色 */  
-     margin-bottom: 20px;
+     margin-bottom: 15px;
      margin-top:20px;
 }
     
